# cfggen

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  README_cn .md  SPEC.md  build.bat  fatjar.bat  genexe_step1.bat  genexe_step2.bat  genjar.bat  mkexe.bat  settings.gradle
.claude/: settings.local.json
Writerside/: c.tree  writerside.cfg
app/: CLAUDE.md  README.md  README_EN.md  build.gradle
cfgdev/: CLAUDE.md  HighlightRule.md  INTENT.md  README.md  vscodedoc2.md
cfgeditor/: .eslintrc.cjs  .gitignore  .ignore  .mcp.json  .oxlintrc.json  CLAUDE.md  CODE_REVIEW.md  DIRECTORY_REVIEW.md  DIRECTORY_STRUCTURE.md  INTENTS.md  README.md  README_EN.md  colourbrown.json  colourorange.json  colourpink.json  colourpurple.json  eslint.config.js  genJsonParser.bat  genexe-debug.bat  genexe.bat  index.html  json.ts  package.json  pnpm-lock.yaml  skills-lock.json  test.html  tsconfig.json  vite.config.ts  vitest.config.ts  状态管理-总结与演进.md
cfgeditor/src-tauri/: Cargo.toml  tauri.conf.json
cfgeditor/src-tauri/capabilities/: migrated.json
cfgeditor/src-tauri/icons/: icon.icns
cfgeditor/src-tauri/src/: lib.rs  main.rs
docs/: Gemfile  README.md  _config.yml  astro.config.mjs  editor.md  index.md  package.json  pnpm-lock.yaml  serve.bat  tsconfig.json
example/: CLAUDE.md  README.md  build.gradle  cfgeditor_server.bat  cfggen_common.bat  config.bytes  config.data  gen.bat  gen_run.bat  gencs.bat  gencs_ls.bat  gencs_ls_client.bat  gencsharp.bat  gengd.bat  gengo.bat  genjava.bat  genjava_ls.bat  genjavasealed.bat  (+11 more)
(+2302 files in other folders)
