[package]
name = "cfgeditor"
version = "0.1.0"
description = "structural data viewer and editor"
authors = ["cxs"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "cfgeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
